// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`color-mixins > colors > create-color-classes 1`] = `
"/* .create-color-classes(red-500, var(--red-500)) */
body .bg-red-500,
body .h\\\\:bg-red-500:hover,
body .f\\\\:bg-red-500:focus,
body .f\\\\:bg-red-500:focus-within {
    background-color: var(--red-500);
}

body .fc-red-500,
body .h\\\\:fc-red-500:hover,
body .f\\\\:fc-red-500:focus,
body .f\\\\:fc-red-500:focus-within {
    color: var(--red-500);
}

@media (prefers-color-scheme: dark) {
    body.theme-system body .d\\\\:bg-red-500 {
        background-color: var(--red-500);
    }

    body.theme-system body .d\\\\:fc-red-500 {
        color: var(--red-500);
    }
}

body.theme-dark body .d\\\\:bg-red-500,
.theme-dark__forced body .d\\\\:bg-red-500,
body.theme-system .theme-dark__forced body .d\\\\:bg-red-500 {
    background-color: var(--red-500);
}

body.theme-dark body .d\\\\:fc-red-500,
.theme-dark__forced body .d\\\\:fc-red-500,
body.theme-system .theme-dark__forced body .d\\\\:fc-red-500 {
    color: var(--red-500);
}
"
`;

exports[`color-mixins > colors > create-colors 1`] = `
"/*
                .set-test-emerald() {
                    default: hsl(150, 60%, 55%);
                }
                .set-test-ruby() {
                    100: hsl(350, 70%, 97%);
                    600: hsl(350, 70%, 29%);
                }
                .sets-test() {
                    emerald: .set-test-emerald();
                    ruby: .set-test-ruby();
                }
                */
/* .create-colors(.sets-test(), variables) */
body {
    --emerald-new: hsl(150, 60%, 55%);
    --ruby-new-100: hsl(350, 70%, 97%);
    --ruby-new-600: hsl(350, 70%, 29%);
}
/* .create-colors(.sets-test(), classes) */
body .bg-emerald-new,
body .h\\\\:bg-emerald-new:hover,
body .f\\\\:bg-emerald-new:focus,
body .f\\\\:bg-emerald-new:focus-within {
    background-color: var(--emerald-new) !important;
}

body .fc-emerald-new,
body .h\\\\:fc-emerald-new:hover,
body .f\\\\:fc-emerald-new:focus,
body .f\\\\:fc-emerald-new:focus-within {
    color: var(--emerald-new) !important;
}

@media (prefers-color-scheme: dark) {
    body.theme-system body .d\\\\:bg-emerald-new {
        background-color: var(--emerald-new) !important;
    }

    body.theme-system body .d\\\\:fc-emerald-new {
        color: var(--emerald-new) !important;
    }
}

body.theme-dark body .d\\\\:bg-emerald-new,
.theme-dark__forced body .d\\\\:bg-emerald-new,
body.theme-system .theme-dark__forced body .d\\\\:bg-emerald-new {
    background-color: var(--emerald-new) !important;
}

body.theme-dark body .d\\\\:fc-emerald-new,
.theme-dark__forced body .d\\\\:fc-emerald-new,
body.theme-system .theme-dark__forced body .d\\\\:fc-emerald-new {
    color: var(--emerald-new) !important;
}

body .bg-ruby-new-100,
body .h\\\\:bg-ruby-new-100:hover,
body .f\\\\:bg-ruby-new-100:focus,
body .f\\\\:bg-ruby-new-100:focus-within {
    background-color: var(--ruby-new-100) !important;
}

body .fc-ruby-new-100,
body .h\\\\:fc-ruby-new-100:hover,
body .f\\\\:fc-ruby-new-100:focus,
body .f\\\\:fc-ruby-new-100:focus-within {
    color: var(--ruby-new-100) !important;
}

@media (prefers-color-scheme: dark) {
    body.theme-system body .d\\\\:bg-ruby-new-100 {
        background-color: var(--ruby-new-100) !important;
    }

    body.theme-system body .d\\\\:fc-ruby-new-100 {
        color: var(--ruby-new-100) !important;
    }
}

body.theme-dark body .d\\\\:bg-ruby-new-100,
.theme-dark__forced body .d\\\\:bg-ruby-new-100,
body.theme-system .theme-dark__forced body .d\\\\:bg-ruby-new-100 {
    background-color: var(--ruby-new-100) !important;
}

body.theme-dark body .d\\\\:fc-ruby-new-100,
.theme-dark__forced body .d\\\\:fc-ruby-new-100,
body.theme-system .theme-dark__forced body .d\\\\:fc-ruby-new-100 {
    color: var(--ruby-new-100) !important;
}

body .bg-ruby-new-600,
body .h\\\\:bg-ruby-new-600:hover,
body .f\\\\:bg-ruby-new-600:focus,
body .f\\\\:bg-ruby-new-600:focus-within {
    background-color: var(--ruby-new-600) !important;
}

body .fc-ruby-new-600,
body .h\\\\:fc-ruby-new-600:hover,
body .f\\\\:fc-ruby-new-600:focus,
body .f\\\\:fc-ruby-new-600:focus-within {
    color: var(--ruby-new-600) !important;
}

@media (prefers-color-scheme: dark) {
    body.theme-system body .d\\\\:bg-ruby-new-600 {
        background-color: var(--ruby-new-600) !important;
    }

    body.theme-system body .d\\\\:fc-ruby-new-600 {
        color: var(--ruby-new-600) !important;
    }
}

body.theme-dark body .d\\\\:bg-ruby-new-600,
.theme-dark__forced body .d\\\\:bg-ruby-new-600,
body.theme-system .theme-dark__forced body .d\\\\:bg-ruby-new-600 {
    background-color: var(--ruby-new-600) !important;
}

body.theme-dark body .d\\\\:fc-ruby-new-600,
.theme-dark__forced body .d\\\\:fc-ruby-new-600,
body.theme-system .theme-dark__forced body .d\\\\:fc-ruby-new-600 {
    color: var(--ruby-new-600) !important;
}
"
`;

exports[`color-mixins > colors > generate-colors > default 1`] = `
"/* .generate-colors(default) */
"
`;

exports[`color-mixins > colors > generate-colors > light 1`] = `
"/* .generate-colors(light) */
body,
body.themed,
body .themed {
    --white-new: hsl(0, 0%, 100%);
    --black-new-050: hsl(0, 0%, 100%);
    --black-new-100: hsl(210, 8%, 98%);
    --black-new-150: hsl(210, 8%, 95%);
    --black-new-200: hsl(210, 8%, 90%);
    --black-new-225: hsl(210, 8%, 85%);
    --black-new-250: hsl(210, 8%, 80%);
    --black-new-300: hsl(213, 9%, 75%);
    --black-new-350: hsl(212, 8%, 68%);
    --black-new-400: hsl(210, 8%, 45%);
    --black-new-500: hsl(210, 8%, 25%);
    --black-new-600: hsl(210, 8%, 5%);
    --black-new: hsl(0, 0%, 0%);
    --orange-new-100: hsl(23, 85%, 97%);
    --orange-new-200: hsl(27, 85%, 87%);
    --orange-new-300: hsl(27, 85%, 72%);
    --orange-new-400: hsl(27, 90%, 55%);
    --orange-new-500: hsl(27, 88%, 43%);
    --orange-new-600: hsl(27, 80%, 29%);
    --blue-new-100: hsl(210, 80%, 96%);
    --blue-new-200: hsl(210, 80%, 91%);
    --blue-new-300: hsl(210, 78%, 76%);
    --blue-new-400: hsl(210, 70%, 48%);
    --blue-new-500: hsl(210, 75%, 36%);
    --blue-new-600: hsl(210, 80%, 23%);
    --green-new-100: hsl(148, 35%, 95%);
    --green-new-200: hsl(148, 35%, 88%);
    --green-new-300: hsl(148, 35%, 69%);
    --green-new-400: hsl(148, 70%, 31%);
    --green-new-500: hsl(148, 75%, 22%);
    --green-new-600: hsl(148, 75%, 15%);
    --red-new-100: hsl(0, 78%, 96%);
    --red-new-200: hsl(0, 70%, 93%);
    --red-new-300: hsl(0, 65%, 76%);
    --red-new-400: hsl(0, 60%, 49%);
    --red-new-500: hsl(0, 65%, 37%);
    --red-new-600: hsl(0, 65%, 24%);
    --yellow-new-100: hsl(43, 80%, 96%);
    --yellow-new-200: hsl(43, 80%, 88%);
    --yellow-new-300: hsl(43, 85%, 72%);
    --yellow-new-400: hsl(43, 85%, 50%);
    --yellow-new-500: hsl(43, 85%, 33%);
    --yellow-new-600: hsl(43, 84%, 18%);
    --gold-new-100: hsl(46, 100%, 91%);
    --gold-new-200: hsl(46, 100%, 74%);
    --gold-new-300: hsl(45, 100%, 42%);
    --gold-new-400: hsl(46, 92%, 26%);
    --silver-new-100: hsl(0, 0%, 95%);
    --silver-new-200: hsl(0, 0%, 84%);
    --silver-new-300: hsl(210, 5%, 68%);
    --silver-new-400: hsl(210, 2%, 40%);
    --bronze-new-100: hsl(28, 40%, 92%);
    --bronze-new-200: hsl(30, 47%, 83%);
    --bronze-new-300: hsl(28, 43%, 65%);
    --bronze-new-400: hsl(28, 43%, 39%);
    --bc-new-lightest: var(--black-new-100);
    --bc-new-lighter: var(--black-new-150);
    --bc-new-light: var(--black-new-200);
    --bc-new-medium: var(--black-new-225);
    --bc-new-dark: var(--black-new-250);
    --bc-new-darker: var(--black-new-300);
    --bs-new-sm: 0 1px 2px hsla(0, 0%, 0%, 0.05), 0 1px 4px hsla(0, 0%, 0%, 0.05), 0 2px 8px hsla(0, 0%, 0%, 0.05);
    --bs-new-md: 0 1px 3px hsla(0, 0%, 0%, 0.06), 0 2px 6px hsla(0, 0%, 0%, 0.06), 0 3px 8px hsla(0, 0%, 0%, 0.09);
    --bs-new-lg: 0 1px 4px hsla(0, 0%, 0%, 0.09), 0 3px 8px hsla(0, 0%, 0%, 0.09), 0 4px 13px hsla(0, 0%, 0%, 0.13);
    --bs-new-xl: 0 10px 24px hsla(0, 0%, 0%, 0.05), 0 20px 48px hsla(0, 0%, 0%, 0.05), 0 1px 4px hsla(0, 0%, 0%, 0.1);
    --focus-new: hsla(206, 100%, 40%, 0.9);
    --focus-new-success: hsla(140, 40%, 75%, 0.4);
    --focus-new-warning: hsla(47, 79%, 58%, 0.4);
    --focus-new-error: hsla(358, 62%, 47%, 0.15);
    --focus-new-muted: hsla(210, 8%, 15%, 0.1);
    --highlight-new-addition: var(--green-700);
    --highlight-new-attribute: hsl(206, 98.5%, 29%);
    --highlight-new-bg: hsl(0, 0%, 96.5%);
    --highlight-new-color: var(--black-750);
    --highlight-new-comment: hsl(210, 8%, 43.5%);
    --highlight-new-deletion: var(--red-600);
    --highlight-new-keyword: hsl(206, 98.5%, 29%);
    --highlight-new-literal: hsl(27, 99%, 36%);
    --highlight-new-namespace: hsl(27, 99%, 36%);
    --highlight-new-punctuation: var(--black-600);
    --highlight-new-symbol: hsl(306, 43%, 35%);
    --highlight-new-variable: hsl(80, 80.5%, 26.5%);
    --scrollbar-new: hsla(0, 0%, 0%, 0.2);
    --theme-primary-new: var(--theme-primary-new-custom, var(--orange-new-400));
    --theme-primary-new-100: var(--theme-primary-new-custom-100, var(--orange-new-100));
    --theme-primary-new-200: var(--theme-primary-new-custom-200, var(--orange-new-200));
    --theme-primary-new-300: var(--theme-primary-new-custom-300, var(--orange-new-300));
    --theme-primary-new-400: var(--theme-primary-new-custom-400, var(--orange-new-400));
    --theme-primary-new-500: var(--theme-primary-new-custom-500, var(--orange-new-500));
    --theme-primary-new-600: var(--theme-primary-new-custom-600, var(--orange-new-600));
    --theme-secondary-new: var(--theme-secondary-new-custom, var(--blue-new-400));
    --theme-secondary-new-100: var(--theme-secondary-new-custom-100, var(--blue-new-100));
    --theme-secondary-new-200: var(--theme-secondary-new-custom-200, var(--blue-new-200));
    --theme-secondary-new-300: var(--theme-secondary-new-custom-300, var(--blue-new-300));
    --theme-secondary-new-400: var(--theme-secondary-new-custom-400, var(--blue-new-400));
    --theme-secondary-new-500: var(--theme-secondary-new-custom-500, var(--blue-new-500));
    --theme-secondary-new-600: var(--theme-secondary-new-custom-600, var(--blue-new-600));
    --theme-primary-new-custom: hsl(var(--theme-base-primary-color-new-h), var(--theme-base-primary-color-new-s), var(--theme-base-primary-color-new-l));
    --theme-primary-new-custom-100: rgb(calc(234.6 + var(--theme-base-primary-color-new-r) * 0.08), calc(234.6 + var(--theme-base-primary-color-new-g) * 0.08), calc(234.6 + var(--theme-base-primary-color-new-b) * 0.08));
    --theme-primary-new-custom-200: rgb(calc(198.9 + var(--theme-base-primary-color-new-r) * 0.22), calc(198.9 + var(--theme-base-primary-color-new-g) * 0.22), calc(198.9 + var(--theme-base-primary-color-new-b) * 0.22));
    --theme-primary-new-custom-300: rgb(calc(89.25 + var(--theme-base-primary-color-new-r) * 0.65), calc(89.25 + var(--theme-base-primary-color-new-g) * 0.65), calc(89.25 + var(--theme-base-primary-color-new-b) * 0.65));
    --theme-primary-new-custom-400: var(--theme-primary-new-custom);
    --theme-primary-new-custom-500: hsl(var(--theme-base-primary-color-new-h), var(--theme-base-primary-color-new-s), calc(var(--theme-base-primary-color-new-l) - 10%));
    --theme-primary-new-custom-600: hsl(var(--theme-base-primary-color-new-h), var(--theme-base-primary-color-new-s), calc(var(--theme-base-primary-color-new-l) - 26%));
    --theme-secondary-new-custom: hsl(var(--theme-base-secondary-color-new-h), var(--theme-base-secondary-color-new-s), var(--theme-base-secondary-color-new-l));
    --theme-secondary-new-custom-100: rgb(calc(234.6 + var(--theme-base-secondary-color-new-r) * 0.08), calc(234.6 + var(--theme-base-secondary-color-new-g) * 0.08), calc(234.6 + var(--theme-base-secondary-color-new-b) * 0.08));
    --theme-secondary-new-custom-200: rgb(calc(198.9 + var(--theme-base-secondary-color-new-r) * 0.22), calc(198.9 + var(--theme-base-secondary-color-new-g) * 0.22), calc(198.9 + var(--theme-base-secondary-color-new-b) * 0.22));
    --theme-secondary-new-custom-300: rgb(calc(89.25 + var(--theme-base-secondary-color-new-r) * 0.65), calc(89.25 + var(--theme-base-secondary-color-new-g) * 0.65), calc(89.25 + var(--theme-base-secondary-color-new-b) * 0.65));
    --theme-secondary-new-custom-400: var(--theme-secondary-new-custom);
    --theme-secondary-new-custom-500: hsl(var(--theme-base-secondary-color-new-h), var(--theme-base-secondary-color-new-s), calc(var(--theme-base-secondary-color-new-l) - 10%));
    --theme-secondary-new-custom-600: hsl(var(--theme-base-secondary-color-new-h), var(--theme-base-secondary-color-new-s), calc(var(--theme-base-secondary-color-new-l) - 26%));
    color: var(--theme-body-font-color-new, var(--black-new-600));
}
"
`;

exports[`color-mixins > theming > create-custom-theme-hsl-rgb-variables 1`] = `
"create-custom-theme-hsl-rgb-variables(#ff1100, primary, base) {
    --theme-base-primary-color-new-h: 4;
    --theme-base-primary-color-new-s: 100%;
    --theme-base-primary-color-new-l: 50%;
    --theme-base-primary-color-new-r: 255;
    --theme-base-primary-color-new-g: 17;
    --theme-base-primary-color-new-b: 0;
    --theme-primary-new-custom: hsl(var(--theme-base-primary-color-new-h), var(--theme-base-primary-color-new-s), var(--theme-base-primary-color-new-l));
    --theme-primary-new-custom-100: rgb(calc(234.6 + var(--theme-base-primary-color-new-r) * 0.08), calc(234.6 + var(--theme-base-primary-color-new-g) * 0.08), calc(234.6 + var(--theme-base-primary-color-new-b) * 0.08));
    --theme-primary-new-custom-200: rgb(calc(198.9 + var(--theme-base-primary-color-new-r) * 0.22), calc(198.9 + var(--theme-base-primary-color-new-g) * 0.22), calc(198.9 + var(--theme-base-primary-color-new-b) * 0.22));
    --theme-primary-new-custom-300: rgb(calc(89.25 + var(--theme-base-primary-color-new-r) * 0.65), calc(89.25 + var(--theme-base-primary-color-new-g) * 0.65), calc(89.25 + var(--theme-base-primary-color-new-b) * 0.65));
    --theme-primary-new-custom-400: var(--theme-primary-new-custom);
    --theme-primary-new-custom-500: hsl(var(--theme-base-primary-color-new-h), var(--theme-base-primary-color-new-s), calc(var(--theme-base-primary-color-new-l) - 10%));
    --theme-primary-new-custom-600: hsl(var(--theme-base-primary-color-new-h), var(--theme-base-primary-color-new-s), calc(var(--theme-base-primary-color-new-l) - 26%));
}

create-custom-theme-hsl-rgb-variables(#29ff53, secondary, base) {
    --theme-base-secondary-color-new-h: 131.77570093;
    --theme-base-secondary-color-new-s: 100%;
    --theme-base-secondary-color-new-l: 58.03921569%;
    --theme-base-secondary-color-new-r: 41;
    --theme-base-secondary-color-new-g: 255;
    --theme-base-secondary-color-new-b: 83;
    --theme-secondary-new-custom: hsl(var(--theme-base-secondary-color-new-h), var(--theme-base-secondary-color-new-s), var(--theme-base-secondary-color-new-l));
    --theme-secondary-new-custom-100: rgb(calc(234.6 + var(--theme-base-secondary-color-new-r) * 0.08), calc(234.6 + var(--theme-base-secondary-color-new-g) * 0.08), calc(234.6 + var(--theme-base-secondary-color-new-b) * 0.08));
    --theme-secondary-new-custom-200: rgb(calc(198.9 + var(--theme-base-secondary-color-new-r) * 0.22), calc(198.9 + var(--theme-base-secondary-color-new-g) * 0.22), calc(198.9 + var(--theme-base-secondary-color-new-b) * 0.22));
    --theme-secondary-new-custom-300: rgb(calc(89.25 + var(--theme-base-secondary-color-new-r) * 0.65), calc(89.25 + var(--theme-base-secondary-color-new-g) * 0.65), calc(89.25 + var(--theme-base-secondary-color-new-b) * 0.65));
    --theme-secondary-new-custom-400: var(--theme-secondary-new-custom);
    --theme-secondary-new-custom-500: hsl(var(--theme-base-secondary-color-new-h), var(--theme-base-secondary-color-new-s), calc(var(--theme-base-secondary-color-new-l) - 10%));
    --theme-secondary-new-custom-600: hsl(var(--theme-base-secondary-color-new-h), var(--theme-base-secondary-color-new-s), calc(var(--theme-base-secondary-color-new-l) - 26%));
}

create-custom-theme-hsl-rgb-variables(#1c091d, primary, dark) {
    --theme-dark-primary-color-new-h: 297;
    --theme-dark-primary-color-new-s: 52.63157895%;
    --theme-dark-primary-color-new-l: 7.45098039%;
    --theme-dark-primary-color-new-r: 28;
    --theme-dark-primary-color-new-g: 9;
    --theme-dark-primary-color-new-b: 29;
    --theme-dark-primary-new-custom: hsl(var(--theme-dark-primary-color-new-h), var(--theme-dark-primary-color-new-s), var(--theme-dark-primary-color-new-l));
    --theme-dark-primary-new-custom-100: hsl(var(--theme-dark-primary-color-new-h), clamp(10%, calc(var(--theme-dark-primary-color-new-s) - 12%), 90%), clamp(20%, calc(var(--theme-dark-primary-color-new-l) - 55%), 100%));
    --theme-dark-primary-new-custom-200: hsl(var(--theme-dark-primary-color-new-h), clamp(10%, calc(var(--theme-dark-primary-color-new-s) - 10%), 90%), clamp(20%, calc(var(--theme-dark-primary-color-new-l) - 35%), 100%));
    --theme-dark-primary-new-custom-300: hsl(var(--theme-dark-primary-color-new-h), clamp(10%, calc(var(--theme-dark-primary-color-new-s) - 8%), 90%), clamp(20%, calc(var(--theme-dark-primary-color-new-l) - 20%), 100%));
    --theme-dark-primary-new-custom-400: var(--theme-dark-primary-new-custom);
    --theme-dark-primary-new-custom-500: rgb(calc(91.8 + var(--theme-dark-primary-color-new-r) * 0.64), calc(91.8 + var(--theme-dark-primary-color-new-g) * 0.64), calc(91.8 + var(--theme-dark-primary-color-new-b) * 0.64));
    --theme-dark-primary-new-custom-600: rgb(calc(191.25 + var(--theme-dark-primary-color-new-r) * 0.25), calc(191.25 + var(--theme-dark-primary-color-new-g) * 0.25), calc(191.25 + var(--theme-dark-primary-color-new-b) * 0.25));
}

create-custom-theme-hsl-rgb-variables(#49281f, secondary, dark) {
    --theme-dark-secondary-color-new-h: 12.85714286;
    --theme-dark-secondary-color-new-s: 40.38461538%;
    --theme-dark-secondary-color-new-l: 20.39215686%;
    --theme-dark-secondary-color-new-r: 73;
    --theme-dark-secondary-color-new-g: 40;
    --theme-dark-secondary-color-new-b: 31;
    --theme-dark-secondary-new-custom: hsl(var(--theme-dark-secondary-color-new-h), var(--theme-dark-secondary-color-new-s), var(--theme-dark-secondary-color-new-l));
    --theme-dark-secondary-new-custom-100: hsl(var(--theme-dark-secondary-color-new-h), clamp(10%, calc(var(--theme-dark-secondary-color-new-s) - 12%), 90%), clamp(20%, calc(var(--theme-dark-secondary-color-new-l) - 55%), 100%));
    --theme-dark-secondary-new-custom-200: hsl(var(--theme-dark-secondary-color-new-h), clamp(10%, calc(var(--theme-dark-secondary-color-new-s) - 10%), 90%), clamp(20%, calc(var(--theme-dark-secondary-color-new-l) - 35%), 100%));
    --theme-dark-secondary-new-custom-300: hsl(var(--theme-dark-secondary-color-new-h), clamp(10%, calc(var(--theme-dark-secondary-color-new-s) - 8%), 90%), clamp(20%, calc(var(--theme-dark-secondary-color-new-l) - 20%), 100%));
    --theme-dark-secondary-new-custom-400: var(--theme-dark-secondary-new-custom);
    --theme-dark-secondary-new-custom-500: rgb(calc(91.8 + var(--theme-dark-secondary-color-new-r) * 0.64), calc(91.8 + var(--theme-dark-secondary-color-new-g) * 0.64), calc(91.8 + var(--theme-dark-secondary-color-new-b) * 0.64));
    --theme-dark-secondary-new-custom-600: rgb(calc(191.25 + var(--theme-dark-secondary-color-new-r) * 0.25), calc(191.25 + var(--theme-dark-secondary-color-new-g) * 0.25), calc(191.25 + var(--theme-dark-secondary-color-new-b) * 0.25));
}
"
`;

exports[`color-mixins > theming > create-custom-theme-variables 1`] = `
"create-custom-theme-variables(primary, base) {
    --theme-primary-new-custom: hsl(var(--theme-base-primary-color-new-h), var(--theme-base-primary-color-new-s), var(--theme-base-primary-color-new-l));
    --theme-primary-new-custom-100: rgb(calc(234.6 + var(--theme-base-primary-color-new-r) * 0.08), calc(234.6 + var(--theme-base-primary-color-new-g) * 0.08), calc(234.6 + var(--theme-base-primary-color-new-b) * 0.08));
    --theme-primary-new-custom-200: rgb(calc(198.9 + var(--theme-base-primary-color-new-r) * 0.22), calc(198.9 + var(--theme-base-primary-color-new-g) * 0.22), calc(198.9 + var(--theme-base-primary-color-new-b) * 0.22));
    --theme-primary-new-custom-300: rgb(calc(89.25 + var(--theme-base-primary-color-new-r) * 0.65), calc(89.25 + var(--theme-base-primary-color-new-g) * 0.65), calc(89.25 + var(--theme-base-primary-color-new-b) * 0.65));
    --theme-primary-new-custom-400: var(--theme-primary-new-custom);
    --theme-primary-new-custom-500: hsl(var(--theme-base-primary-color-new-h), var(--theme-base-primary-color-new-s), calc(var(--theme-base-primary-color-new-l) - 10%));
    --theme-primary-new-custom-600: hsl(var(--theme-base-primary-color-new-h), var(--theme-base-primary-color-new-s), calc(var(--theme-base-primary-color-new-l) - 26%));
}

create-custom-theme-variables(primary, dark) {
    --theme-dark-primary-new-custom: hsl(var(--theme-dark-primary-color-new-h), var(--theme-dark-primary-color-new-s), var(--theme-dark-primary-color-new-l));
    --theme-dark-primary-new-custom-100: hsl(var(--theme-dark-primary-color-new-h), clamp(10%, calc(var(--theme-dark-primary-color-new-s) - 12%), 90%), clamp(20%, calc(var(--theme-dark-primary-color-new-l) - 55%), 100%));
    --theme-dark-primary-new-custom-200: hsl(var(--theme-dark-primary-color-new-h), clamp(10%, calc(var(--theme-dark-primary-color-new-s) - 10%), 90%), clamp(20%, calc(var(--theme-dark-primary-color-new-l) - 35%), 100%));
    --theme-dark-primary-new-custom-300: hsl(var(--theme-dark-primary-color-new-h), clamp(10%, calc(var(--theme-dark-primary-color-new-s) - 8%), 90%), clamp(20%, calc(var(--theme-dark-primary-color-new-l) - 20%), 100%));
    --theme-dark-primary-new-custom-400: var(--theme-dark-primary-new-custom);
    --theme-dark-primary-new-custom-500: rgb(calc(91.8 + var(--theme-dark-primary-color-new-r) * 0.64), calc(91.8 + var(--theme-dark-primary-color-new-g) * 0.64), calc(91.8 + var(--theme-dark-primary-color-new-b) * 0.64));
    --theme-dark-primary-new-custom-600: rgb(calc(191.25 + var(--theme-dark-primary-color-new-r) * 0.25), calc(191.25 + var(--theme-dark-primary-color-new-g) * 0.25), calc(191.25 + var(--theme-dark-primary-color-new-b) * 0.25));
}

create-custom-theme-variables(secondary, base) {
    --theme-secondary-new-custom: hsl(var(--theme-base-secondary-color-new-h), var(--theme-base-secondary-color-new-s), var(--theme-base-secondary-color-new-l));
    --theme-secondary-new-custom-100: rgb(calc(234.6 + var(--theme-base-secondary-color-new-r) * 0.08), calc(234.6 + var(--theme-base-secondary-color-new-g) * 0.08), calc(234.6 + var(--theme-base-secondary-color-new-b) * 0.08));
    --theme-secondary-new-custom-200: rgb(calc(198.9 + var(--theme-base-secondary-color-new-r) * 0.22), calc(198.9 + var(--theme-base-secondary-color-new-g) * 0.22), calc(198.9 + var(--theme-base-secondary-color-new-b) * 0.22));
    --theme-secondary-new-custom-300: rgb(calc(89.25 + var(--theme-base-secondary-color-new-r) * 0.65), calc(89.25 + var(--theme-base-secondary-color-new-g) * 0.65), calc(89.25 + var(--theme-base-secondary-color-new-b) * 0.65));
    --theme-secondary-new-custom-400: var(--theme-secondary-new-custom);
    --theme-secondary-new-custom-500: hsl(var(--theme-base-secondary-color-new-h), var(--theme-base-secondary-color-new-s), calc(var(--theme-base-secondary-color-new-l) - 10%));
    --theme-secondary-new-custom-600: hsl(var(--theme-base-secondary-color-new-h), var(--theme-base-secondary-color-new-s), calc(var(--theme-base-secondary-color-new-l) - 26%));
}

create-custom-theme-variables(secondary, base) {
    --theme-secondary-new-custom: hsl(var(--theme-base-secondary-color-new-h), var(--theme-base-secondary-color-new-s), var(--theme-base-secondary-color-new-l));
    --theme-secondary-new-custom-100: rgb(calc(234.6 + var(--theme-base-secondary-color-new-r) * 0.08), calc(234.6 + var(--theme-base-secondary-color-new-g) * 0.08), calc(234.6 + var(--theme-base-secondary-color-new-b) * 0.08));
    --theme-secondary-new-custom-200: rgb(calc(198.9 + var(--theme-base-secondary-color-new-r) * 0.22), calc(198.9 + var(--theme-base-secondary-color-new-g) * 0.22), calc(198.9 + var(--theme-base-secondary-color-new-b) * 0.22));
    --theme-secondary-new-custom-300: rgb(calc(89.25 + var(--theme-base-secondary-color-new-r) * 0.65), calc(89.25 + var(--theme-base-secondary-color-new-g) * 0.65), calc(89.25 + var(--theme-base-secondary-color-new-b) * 0.65));
    --theme-secondary-new-custom-400: var(--theme-secondary-new-custom);
    --theme-secondary-new-custom-500: hsl(var(--theme-base-secondary-color-new-h), var(--theme-base-secondary-color-new-s), calc(var(--theme-base-secondary-color-new-l) - 10%));
    --theme-secondary-new-custom-600: hsl(var(--theme-base-secondary-color-new-h), var(--theme-base-secondary-color-new-s), calc(var(--theme-base-secondary-color-new-l) - 26%));
}
"
`;

exports[`color-mixins > theming > create-theme-variables 1`] = `
"create-theme-variables {
    --theme-primary-new: var(--theme-primary-new-custom, var(--orange-new-400));
    --theme-primary-new-100: var(--theme-primary-new-custom-100, var(--orange-new-100));
    --theme-primary-new-200: var(--theme-primary-new-custom-200, var(--orange-new-200));
    --theme-primary-new-300: var(--theme-primary-new-custom-300, var(--orange-new-300));
    --theme-primary-new-400: var(--theme-primary-new-custom-400, var(--orange-new-400));
    --theme-primary-new-500: var(--theme-primary-new-custom-500, var(--orange-new-500));
    --theme-primary-new-600: var(--theme-primary-new-custom-600, var(--orange-new-600));
    --theme-secondary-new: var(--theme-secondary-new-custom, var(--blue-new-400));
    --theme-secondary-new-100: var(--theme-secondary-new-custom-100, var(--blue-new-100));
    --theme-secondary-new-200: var(--theme-secondary-new-custom-200, var(--blue-new-200));
    --theme-secondary-new-300: var(--theme-secondary-new-custom-300, var(--blue-new-300));
    --theme-secondary-new-400: var(--theme-secondary-new-custom-400, var(--blue-new-400));
    --theme-secondary-new-500: var(--theme-secondary-new-custom-500, var(--blue-new-500));
    --theme-secondary-new-600: var(--theme-secondary-new-custom-600, var(--blue-new-600));
}
"
`;
